--- a/assets/css/sass/containers.scss
+++ b/assets/css/sass/containers.scss
@@ -211,6 +211,9 @@ body .flocks-widget-container {
 #geodir-wrapper + .geodir_full_page {
     padding: 0 15px 50px;
     margin-bottom: 0;
+    &:empty {
+        padding: 0;
+    }
 }
 
 // GD Header Slider
@@ -317,10 +320,8 @@ body .flocks-widget-container {
 
 // List Layout
 .geodir_category_list_view {
-    .geodir_Star {
-        img {
-
-        }
+    .geodir-rating {
+        display: inline-block;
     }
 }
 // List and Grid Layout
@@ -396,16 +397,42 @@ body .flocks-widget-container {
             &:last-of-type {
                 border-bottom: none;
             }
+            &.geodir-listview {
+                .geodir-content  {
+                    padding-right: 3%;
+                    margin-right: 0;
+                }
+                .geodir-entry-meta  {
+                    display: inline-block;
+                    width: 25%;
+                }
+                .geodir-addinfo {
+                    width: 100%;
+                    text-align: right;
+                    @media(max-width: 768px) {
+                        text-align: left;
+                    }
+                    .gd-star-rating {
+                        display: inline-block;
+                        margin-right: 0;
+                        margin-bottom: 10px;
+                        i.fa {
+                            &:last-of-type {
+                                margin-right: 0!important;
+                            }
+                        }
+                    }
+                }
+            }
 
             .geodir-post-img,
             .geodir-addinfo {
                 position: relative;
+            }
+            .geodir-addinfo {
                 .gd-star-rating {
                     line-height: normal;
                     margin-bottom: 5px;
-                    i.fa-star {
-                        margin-top: 9.5px;
-                    }
                 }
             }
             .geodir-post-img {
@@ -437,6 +464,9 @@ body .flocks-widget-container {
             }
             h3 {
                 margin-bottom: 5px;
+                white-space: nowrap;
+                text-overflow: ellipsis;
+                overflow: hidden;
                 a {
                     color: #444;
                     font-weight: 600;
@@ -448,7 +478,7 @@ body .flocks-widget-container {
                 p {
                     font-size: 14px;
                     position: relative;
-                    height: 96px;
+                    max-height: 96px;
                     line-height: inherit;
                 }
             }
@@ -476,7 +506,6 @@ body .flocks-widget-container {
                 }
                 .geodir-pcomments {
                     i {
-                        color: #FFB74D;
                         font-size: 16px;
                         margin-right: 8px;
                     }
@@ -963,14 +992,13 @@ dl.geodir-tab-head dd a {
             .geodir_category_list_view {
                 li {
                     border: none;
+                    .geodir-post-img {
+                        margin-bottom: 15px;
+                    }
                     .geodir-entry-content {
                         p {
-                            padding-bottom: 30px;
-                            position: relative;
-                            a {
-                                position: absolute;
-                                left: 0;
-                                bottom: 5px;
+                            .excerpt-read-more {
+                                display: none;
                             }
                         }
                     }
